<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poor Mens Carrera Loop Counter</string>
    <string name="race_section3">Rennende</string>
    <string name="race_section2">Rennen</string>
    <string name="race_section1">Vorbereitung</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="racemode">Rennmodus</string>
    <string name="lap_mode">Runde/n</string>
    <string name="min_mode">Minute/n</string>
    <string name="scan_track">Strecke scannen</string>
    <string name="results">Ergebnisse</string>
       
    
    <string-array name="tracks">
        <item>Track 1</item>
        <item>Track 2</item>
        <item>Track 3</item>
        <item>Track 4</item>
        <item>Hidden Track</item>
    </string-array>
    <string name="results_section1">Ergebnisse</string>
    <string name="results_section2">Leaderboard</string>
    <string name="choose_track_spinner_icon">Track Icon</string>
    <string name="go_to_results">Zu den Ergebnissen</string>
    <string name="race_menu_exit">Beenden</string>
    <string name="settings_menu_new_race">Neues Rennen</string>
    <string name="race_menu">Rennmenü</string>
    <string name="settings_menu">Einstellungen</string>
    <string name="scan_cars">Fahrzeuge scannen</string>
    <string name="dialog_one_player">Spielername</string>
    <string name="dialog_one_player_hint">Name</string>
    <string name="dialog_new_player">Neu erstellen</string>
    <string name="dialog_left_player">Spielername Links</string>
    <string name="dialog_left_player_hint">Name</string>
    <string name="dialog_right_player">Spielername Rechts</string>
    <string name="dialog_right_player_hint">Name</string>
    <string name="dialog_enter">Los gehts!</string>
    <string name="dialog_ghost">Geist</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="dialog_name_warning">Name eingeben!</string>
    <string name="dialog_name_exists">Name existiert bereits!</string>
    <string name="complete">Fertig</string>
    <string name="rescan">Neuer Scan</string>
    <string name="visual_speed_faster">Schneller</string>
    <string name="visual_speed_slower">Langsamer</string>
    <string name="raceview_time">Zeit</string>
    <string name="raceview_round">Runde</string>
    <string name="raceview_speed">Speed</string>
    <string name="best_time">Schnellste Runde</string>
    <string name="raceview_ghost_finished">Sieg für den Geist!</string>
    <string name="raceview_left_finished">Sieg für Links!</string>
    <string name="raceview_right_finished">Sieg für Rechts!</string>
    <string name="raceview_time_updater">*00.00.00*</string>
    <string name="raceview_ghost_name">Geist</string>
    <string name="raceview_left_name">leftplayer</string>
    <string name="raceview_right_name">rightplayer</string>
    <string name="raceview_round_updater_left">Links</string>
    <string name="raceview_round_updater_right">Rechts</string>
    <string name="raceview_round_text">Runde</string>
    <string name="raceview_speed_updater">00.00 km/h</string>
    <string name="raceview_speed_text"> km/h</string>
    <string name="raceview_best_time_updater">00.00.00</string>
    <string name="end_race">Ergebnisse</string>
    <string name="new_race">Neues Rennen</string>
    <string name="finish_heading">Rennende</string>
    <string name="finish_track">Strecke</string>
    <string name="finish_mode">Spielmodus</string>
    <string name="finish_name">Name</string>
    <string name="finish_lane">Spur</string>
    <string name="finish_left_lane">Links</string>
    <string name="finish_right_lane">Rechts</string>
    <string name="finish_new_record">Neuer Rekord!!</string>
    <string name="attempt">Versuch</string>
    <string name="finish_meters">gefahrene Meter</string>
    <string name="finish_roundmode_fastest">Schnellste Runde</string>
    <string name="finish_roundmode_avg_speed">Ø m/s</string>
    <string name="finish_roundmode_driven_time">Gesamtzeit</string>
    <string name="finish_timemode_driven_rounds">vollendete Runden</string>
    <string name="finish_track_view">track</string>
    <string name="finish_mode_view">mode</string>
    <string name="finish_name_view">name</string>
    <string name="finish_win_status">Siegstatus</string>
    <string name="finish_winner">Sieger</string>
    <string name="finish_looser">Verlierer</string>
    <string name="finish_attempt_view">attempt</string>
    <string name="finish_meters_view">meters</string>
    <string name="finish_fastest_view">fastest</string>
    <string name="finish_avg_speed_view">avg.</string>
    <string name="finish_timemode_driven_rounds_view">rounds</string>
    <string name="finish_roundmode_driven_time_view">time</string>    
    <string name="finish_left_attempt_view">l. attempt</string>
    <string name="finish_left_meters_view">l. meters</string>
    <string name="finish_left_fastest_view">l. fastest</string>
    <string name="finish_left_avg_speed_view">l. avg.</string>
    <string name="finish_left_timemode_driven_rounds_view">l. rounds</string>
    <string name="finish_left_roundmode_driven_time_view">l. time</string>
    <string name="finish_right_attempt_view">r. attempt</string>
    <string name="finish_right_meters_view">r. meters</string>
    <string name="finish_right_fastest_view">r. fastest</string>
    <string name="finish_right_avg_speed_view">r. avg.</string>
    <string name="finish_right_timemode_driven_rounds_view">r. rounds</string>
    <string name="finish_right_roundmode_driven_time_view">r. time</string>

    <string name="roundmode">Rundenrennen</string>
    <string name="timermode">Zeitrennen</string>
    <string name="race_countdown">countdown</string>
    <string name="min_count_hint"># Minuten</string>
    <string name="lap_count_hint"># Runden</string>
    <string name="alpha_overlay">Alpha Overlay</string>
    <string name="frame_track_overlay">Strecken Overlay</string>
    <string name="ghost_overlay">Geist Overlay</string>
    <string name="lane_overlay">The Lane Overlay</string>
    <string name="right_car_color">Farbe des rechten Fahrzeugs</string>
    <string name="left_car_color">Farbe des linken Fahrzeugs</string>
    <string name="track_name">Streckenname</string>
    <string name="game_mode">Spielmodus</string>
    <string name="db_results_wholedrivenmeters">Lifetime Meter</string>
    <string name="db_results_attempt">Versuche</string>
    <string name="db_results_wins">Siege</string>
    <string name="db_results_fastestround">Schnellste Runde</string>
    <string name="db_results_lastdrivenmeters">Letzte gefahr. Meter</string>
    <string name="db_results_lastaveragespeed">Letzter Ø Speed</string>
    <string name="db_results_wholeaveragespeed">Gesamter Ø Speed</string>
    

</resources>