<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_left_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"      
        android:layout_marginLeft="6dp" 
        android:text="@string/dialog_left_player"
	    android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_left_player_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/dialog_left_player_hint" />
    
    <TextView
        android:id="@+id/dialog_right_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="6dp" 
        android:layout_alignBaseline="@+id/dialog_left_player"        
        android:layout_toRightOf="@+id/dialog_left_player" 
        android:text="@string/dialog_right_player"
	    android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_right_player_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_left_player_name"        
        android:layout_toRightOf="@+id/dialog_left_player_name" 
        android:hint="@string/dialog_right_player_hint" />

    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_below="@+id/dialog_left_player_name"
        android:text="@string/dialog_enter" />

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_ok"
        android:layout_toRightOf="@+id/dialog_ok"
        android:text="@string/dialog_cancel" />

</RelativeLayout>