<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >   

    

    <TextView
        android:id="@+id/finish_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/finish_heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/finish_new_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/finish_new_record"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/record_yellow"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/finish_roundmode_driven_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"      
        android:visibility="gone"
        android:text="@string/finish_right_roundmode_driven_time_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
        android:id="@+id/finish_track_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_gravity="center"        
        android:text="@string/finish_track_view"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dummy_gray" />

    <TextView
        android:id="@+id/finish_mode_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_gravity="center"
        
        android:text="@string/finish_mode_view"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dummy_gray" />
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_marginTop="20dp" >
    	
	
	    <TextView
	        android:id="@+id/finish_attempt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="65dp"
	        android:text="@string/attempt"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	<!--     <View -->
	<!--         android:id="@+id/mode_name_separator" -->
	<!--         android:layout_width="wrap_content" -->
	<!--         android:layout_height="2dp"         -->
	<!--         android:layout_below="@+id/finish_mode" -->
	<!--         android:layout_marginTop="4dp"  -->
	<!--         android:layout_marginLeft="20dp" -->
	<!--         android:layout_marginRight="20dp" -->
	<!--         android:background="@android:color/white" /> -->
	
	    <TextView
	        android:id="@+id/finish_meters"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/finish_attempt"
	        android:layout_below="@+id/finish_attempt"
	        android:layout_marginTop="15dp"
	        android:text="@string/finish_meters"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <TextView
	        android:id="@+id/finish_fastest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/finish_meters"
	        android:layout_below="@+id/finish_meters"
	        android:layout_marginTop="15dp"
	        android:text="@string/finish_roundmode_fastest"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <TextView
	        android:id="@+id/finish_avg_speed"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/finish_fastest"
	        android:layout_below="@+id/finish_fastest"
	        android:layout_marginTop="15dp"
	        android:text="@string/finish_roundmode_avg_speed"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <TextView
	        android:id="@+id/finish_timemode_driven_rounds"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/finish_avg_speed"
	        android:layout_below="@+id/finish_avg_speed"
	        android:layout_marginTop="15dp"
	        android:visibility="invisible"
	        android:text="@string/finish_timemode_driven_rounds"
	        android:textAppearance="?android:attr/textAppearanceSmall" />	
     
	    <TextView
	        android:id="@+id/finish_left_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:layout_toRightOf="@+id/results_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_name_view"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/dummy_gray" />
	    
	     <TextView
	         android:id="@+id/finish_right_name"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"	         
	         android:layout_toRightOf="@+id/lane_separator"         
	         android:layout_marginLeft="5dp"
	         android:text="@string/finish_name_view"
	         android:textAppearance="?android:attr/textAppearanceLarge"
	         android:textColor="@color/dummy_gray" />
	     
	     <TextView
	        android:id="@+id/finish_left_win_status"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:layout_toRightOf="@+id/results_separator"
	        android:layout_below="@+id/finish_left_name"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_win_status"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/dummy_gray" />
	    
	     <TextView
	         android:id="@+id/finish_right_win_status"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"	         
	         android:layout_toRightOf="@+id/lane_separator"    
	         android:layout_below="@+id/finish_right_name" 
	         android:layout_marginTop="5dp"    
	         android:layout_marginLeft="5dp"
	         android:text="@string/finish_win_status"
	         android:textAppearance="?android:attr/textAppearanceLarge"
	         android:textColor="@color/dummy_gray" />
	        
	    <TextView
	        android:id="@+id/finish_left_attempt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_attempt"
	        android:layout_alignLeft="@+id/results_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_left_attempt_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_left_meters_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_meters"
	        android:layout_alignLeft="@+id/results_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_left_meters_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_left_fastest_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_fastest"
	        android:layout_alignLeft="@+id/results_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_left_fastest_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_left_avg_speed_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_avg_speed"
	        android:layout_alignLeft="@+id/results_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_left_avg_speed_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_left_timemode_driven_rounds_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_timemode_driven_rounds"
	        android:layout_alignBottom="@+id/finish_timemode_driven_rounds"
	        android:layout_alignLeft="@+id/results_separator"
	        android:layout_marginLeft="5dp"
	        android:visibility="invisible"
	        android:text="@string/finish_left_timemode_driven_rounds_view"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/finish_right_attempt_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_attempt"
	        android:layout_alignLeft="@+id/lane_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_right_attempt_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_right_meters_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_meters"
	        android:layout_alignLeft="@+id/lane_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_right_meters_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_right_fastest_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_fastest"
	        android:layout_alignLeft="@+id/lane_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_right_fastest_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_right_avg_speed_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_avg_speed"
	        android:layout_alignLeft="@+id/lane_separator"
	        android:layout_marginLeft="5dp"
	        android:text="@string/finish_right_avg_speed_view"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/dummy_gray" />
	
	    <TextView
	        android:id="@+id/finish_right_timemode_driven_rounds_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/finish_timemode_driven_rounds"
	        android:layout_alignBottom="@+id/finish_timemode_driven_rounds"
	        android:layout_alignLeft="@+id/lane_separator"
	        android:layout_marginLeft="5dp"
	        android:visibility="invisible"
	        android:text="@string/finish_right_timemode_driven_rounds_view"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	     <View
	        android:id="@+id/results_separator"
	        android:layout_width="2dp"
	        android:layout_height="220dp"
	        android:layout_marginLeft="120dp"
	        android:layout_marginTop="0dp"
	        android:background="@android:color/white" />
	
	    <View
	        android:id="@+id/lane_separator"
	        android:layout_width="2dp"
	        android:layout_height="220dp"	        
	        android:layout_marginLeft="230dp"
	        android:background="@android:color/white" />
	    
	    <Button
	        android:id="@+id/go_to_results"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginBottom="20dp"
	        android:layout_marginRight="20dp"
	        android:text="@string/go_to_results" />
	
	    <Button
	        android:id="@+id/new_race"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/go_to_results"
	        android:layout_alignBottom="@+id/go_to_results"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="20dp"
	        android:text="@string/new_race" />
    </RelativeLayout>

</LinearLayout>
